--- a/fushuai-gateway-server/src/main/resources/application.properties
+++ b/fushuai-gateway-server/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.cloud.gateway.discovery.locator.enabled=true
 my.auth.urls=http://localhost:10000/index.html,http://localhost:10000/login\
   ,http://localhost:10000/toCheckLogin,http://localhost:10000/getCode,http://localhost:10000/loginout,http://localhost:10000/toUpload
 #配置登录界面
-my.auth.loginPath=http://localhost:8080/
+my.auth.loginPath=http://127.0.0.1:8080/
 
 
 #设置请求头大小
