--- a/fushuai-dmanager/pom.xml
+++ b/fushuai-dmanager/pom.xml
@@ -67,6 +67,13 @@
             <version>1.2.12</version>
         </dependency>
 
+
+        <!--发送邮件依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
